
syntax = "proto3";

package ga4gh_data_object;

// Import HTTP RESTful annotations
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";
import "ga4gh/data_objects.proto";
import "ga4gh/data_objects_service.proto";
import "ga4gh/metadata_service.proto";

///-------------------------------------------------------------------
message DataBundleObject {
  //REQUIRED
  string id = 1;

  //REQUIRED
  repeated ga4gh.DataObject files = 2;

  //REQUIRED
  // The time at which this object was created in milliseconds from the
  // epoch.
  int64 created = 3; // timestamp

  //REQUIRED
  // The time at which this object was last updated in milliseconds from the
  // epoch.
  int64 updated = 4;

  //OPTIONAL, the md5sum of file md5sums
  string md5sum =  5;

  //OPTIONAL
  string dataset_id = 6;

  //REQUIRED
  repeated string urls = 7;

  //OPTIONAL
  string description = 8;

  //OPTIONAL TODO ARE THESE NAMES, IDS, URLS?
  repeated string aliases = 9;

  //OPTIONAL
  ga4gh.Provenance provenance = 10;

  //OPTIONAL
  google.protobuf.Struct info = 11;

  //OPTIONAL
  // A Resource can optionally be associated with the following linked entities :
  // relationship  example description
  // aliquots         https://github.com/NCI-GDC/gdcdictionary/blob/develop/gdcdictionary/schemas/aliquot.yaml
  // analytes         https://github.com/NCI-GDC/gdcdictionary/blob/develop/gdcdictionary/schemas/analyte.yaml
  // archives         https://github.com/NCI-GDC/gdcdictionary/blob/develop/gdcdictionary/schemas/archive.yaml
  // individual (case,donor)   https://github.com/ga4gh/ga4gh-schemas/blob/master/src/main/proto/ga4gh/bio_metadata.proto#L11
  // centers          https://github.com/NCI-GDC/gdcdictionary/blob/develop/gdcdictionary/schemas/center.yaml
  // data_formats     https://github.com/NCI-GDC/gdcdictionary/blob/develop/gdcdictionary/schemas/data_format.yaml
  // dataset          https://github.com/ga4gh/ga4gh-schemas/blob/master/src/main/proto/ga4gh/metadata.proto#L10
  // derived_files    https://github.com/NCI-GDC/gdcdictionary/blob/develop/gdcdictionary/schemas/file.yaml#L50
  // platforms        https://github.com/NCI-GDC/gdcdictionary/blob/master/gdcdictionary/schemas/platform.yaml
  // portions         https://github.com/NCI-GDC/gdcdictionary/blob/master/gdcdictionary/schemas/portion.yaml
  // project          https://github.com/NCI-GDC/gdcdictionary/blob/master/gdcdictionary/schemas/project.yaml
  // related_files    https://github.com/NCI-GDC/gdcdictionary/blob/develop/gdcdictionary/schemas/file.yaml#L50
  // biosample        https://github.com/ga4gh/ga4gh-schemas/blob/master/src/main/proto/ga4gh/bio_metadata.proto#L65
  // slides           https://github.com/NCI-GDC/gdcdictionary/blob/master/gdcdictionary/schemas/slide.yaml
  // tags             https://github.com/NCI-GDC/gdcdictionary/blob/master/gdcdictionary/schemas/tag.yaml
  // repository       http://docs.icgc.org/portal/api-endpoints/#!/repositories/list
  repeated ga4gh.Link links = 12;

  // OPTIONAL the id of the file as submitted
  string submitted_id = 13;

}

message AddDataBundleObjectResponse {
  string id = 1;
}

message GetDataBundleObjectRequest {
  string id = 1;
}

message DeleteDataBundleObjectRequest {
  string id = 1;
}

message DeleteDataObjectRequest {
  string id = 1;
}

message DataBundleStatusResponse {
  //REQUIRED
  string id = 1;

  //REQUIRED
  repeated DataBundleObject data_bundle_versions = 2;
}

message ListDataBundleObjectsRequest {
  //OPTIONAL
  string id = 1;

  //OPTIONAL, searching description, aliases, and urls
  repeated string has_keys = 2;

  //OPTIONAL
  string dataset_id = 3;

  //OPTIONAL
  string submitted_id = 4;

  //OPTIONAL
  // Specifies the maximum number of results to return in a single page.
  // If unspecified, a system default will be used.
  int32 page_size = 5;

  //OPTIONAL
  // The continuation token, which is used to page through large result sets.
  // To get the next page of results, set this parameter to the value of
  // `next_page_token` from the previous response.
  string page_token = 6;

}

message ListDataBundleObjectsResponse {
  // The list of datasets.
  repeated DataBundleObject data_bundle_objects = 1;

  // The continuation token, which is used to page through large result sets.
  // Provide this value in a subsequent request to return the next page of
  // results. This field will be empty if there aren't any additional results.
  string next_page_token = 2;
}

message FileStatusResponse {
  //REQUIRED
  string id = 1;

  //REQUIRED
  repeated ga4gh.DataObject file_versions = 2;

}


//Web service to get, create, list and delete Data Objects
service DataObjectService {

  //Make a new file
  rpc CreateFile(ga4gh.DataObject) returns (ga4gh.AddDataObjectResponse) {
    option (google.api.http) = {
      post: "/ga4gh/dos/v1/file/{id}"
      body: "*"
    };
  }

  //Update or create a new version of a file (depending on the capabilities of this implementation)
  rpc UpdateFile(ga4gh.DataObject) returns (ga4gh.AddDataObjectResponse) {
    option (google.api.http) = {
      put: "/ga4gh/dos/v1/file/{id}"
      body: "*"
    };
  }

  //Get info about a file
  rpc GetFileStatus(ga4gh.GetDataObjectRequest) returns (FileStatusResponse) {
      option (google.api.http) = {
        get: "/ga4gh/dos/v1/file/{id}/status"
      };
  }

  //Delete a file
  rpc DeleteFile(DeleteDataObjectRequest) returns (ga4gh.GetDataObjectRequest) {
      option (google.api.http) = {
        delete: "/ga4gh/dos/v1/file/{id}"
      };
  }

  //List the files
  rpc ListFiles(ga4gh.ListDataObjectsRequest) returns (ga4gh.ListDataObjectsResponse) {
    option (google.api.http) = {
      get: "/ga4gh/dos/v1/file/list"
    };
  }

  //Make a new data bundle
  rpc CreateDataBundle(DataBundleObject) returns (AddDataBundleObjectResponse) {
    option (google.api.http) = {
      post: "/ga4gh/dos/v1/databundle/{id}"
      body: "*"
    };
  }

  //Create a new version of a data bundle
  rpc UpdateDataBundle(DataBundleObject) returns (AddDataBundleObjectResponse) {
    option (google.api.http) = {
      put: "/ga4gh/dos/v1/databundle/{id}"
      body: "*"
    };
  }

  //Get info about a data bundle
  rpc GetDataBundleStatus(GetDataBundleObjectRequest) returns (DataBundleStatusResponse) {
      option (google.api.http) = {
        get: "/ga4gh/dos/v1/databundle/{id}/status"
      };
  }

  //Delete a data bundle
  rpc DeleteDataBundle(DeleteDataBundleObjectRequest) returns (GetDataBundleObjectRequest) {
      option (google.api.http) = {
        delete: "/ga4gh/dos/v1/databundle/{id}"
      };
  }

  //List the data bundles
  rpc ListDataBundles(ListDataBundleObjectsRequest) returns (ListDataBundleObjectsResponse) {
    option (google.api.http) = {
      get: "/ga4gh/dos/v1/databundle/list"
    };
  }

}
